refactor: query와 command service를 분